--- a/4-2-1-Mallet-TM.ipynb
+++ b/4-2-1-Mallet-TM.ipynb
@@ -49,7 +49,7 @@
    ],
    "source": [
     "fList = []\n",
-    "with open(\"KCC Data/CkipNewsCis18850-KccDict2020.txt\",\"r\", encoding='utf-8-sig') as files: #這邊應該要填入個別議員的\n",
+    "with open(\"KCC Data/CkipNewsCis18850-KccDict2020.txt\",\"r\", encoding='utf-8-sig') as files: #這邊之後要填入個別議員的ckip txt\n",
     "     for file in files:\n",
     "        #simple_preprocess: tokenize,去除標點 - gensim.utils.simple_preprocess(doc, deacc=False, min_len=2, max_len=15)\n",
     "        fList.append(list(utils.simple_preprocess(file, deacc=True, min_len=2,)))\n",
@@ -1021,6 +1021,16 @@
     "sent_topics_sorteddf_mallet.head()\n",
     "print(\"------------------------------\")\n",
     "sent_topics_sorteddf_mallet[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_LDA.txt', 'w') as out:\n",
+    "    pprint(optimal_model.print_topics(num_words=20), stream=out)"
    ]
   },
   {
